Fix #3842 - Vertical scrollbar missing in Studio>Module>Layouts>Detail/Edit>View History>Preview

--- a/themes/SuiteP/css/suitep-base/studio.scss
+++ b/themes/SuiteP/css/suitep-base/studio.scss
@@ -69,9 +69,8 @@
 }
 
 #panels {
-  position: absolute;
+  position: inherit;
   padding: 5px;
-  margin-left: 200px;
   border: 1px solid $panel-default-border;
   border-radius: $border-radius-base;
   float: right;
